--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -45,10 +45,18 @@
     #41d1ff
   );
 
-  --vp-home-hero-image-background-image: linear-gradient(
+  /* --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
     #bd34fe 50%,
     #47caff 50%
+  );
+  --vp-home-hero-image-filter: blur(40px); */
+
+  --vp-home-hero-image-background-image: linear-gradient(
+    -45deg,
+    #FEE200 20%,
+    #F08B09 30%,
+    #844980 10%
   );
   --vp-home-hero-image-filter: blur(40px);
 }
