--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -8,12 +8,12 @@
  * -------------------------------------------------------------------------- */
 
  :root {
-  --vp-c-brand: #646cff;
-  --vp-c-brand-light: #747bff;
-  --vp-c-brand-lighter: #9499ff;
-  --vp-c-brand-lightest: #bcc0ff;
-  --vp-c-brand-dark: #535bf2;
-  --vp-c-brand-darker: #454ce1;
+  --vp-c-brand: #db70d2;
+  --vp-c-brand-light: #e28ada;
+  --vp-c-brand-lighter: #e598de;
+  --vp-c-brand-lightest: #efbfeb;
+  --vp-c-brand-dark: #d456ca;
+  --vp-c-brand-darker: #d148c6;
   --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
 }
 
@@ -22,9 +22,9 @@
  * -------------------------------------------------------------------------- */
 
 :root {
-  --vp-button-brand-border: var(--vp-c-brand-light);
+  --vp-button-brand-border: var(--vp-c-brand-dark);
   --vp-button-brand-text: var(--vp-c-white);
-  --vp-button-brand-bg: var(--vp-c-brand);
+  --vp-button-brand-bg: var(--vp-c-brand-dark);
   --vp-button-brand-hover-border: var(--vp-c-brand-light);
   --vp-button-brand-hover-text: var(--vp-c-white);
   --vp-button-brand-hover-bg: var(--vp-c-brand-light);
@@ -41,8 +41,8 @@
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: -webkit-linear-gradient(
     120deg,
-    #bd34fe 30%,
-    #41d1ff
+    #df82d8 30%,
+    #FEE200
   );
 
   /* --vp-home-hero-image-background-image: linear-gradient(
@@ -54,9 +54,10 @@
 
   --vp-home-hero-image-background-image: linear-gradient(
     -45deg,
-    #FEE200 20%,
     #F08B09 30%,
-    #844980 10%
+    #FEE200 50%,
+    #844980 30%
+    
   );
   --vp-home-hero-image-filter: blur(40px);
 }
